# jvmtoy

./: .gitignore  CMakeLists.txt  README.md
include/jvm/: Utf8String.h
src/: CMakeLists.txt  Class.cpp  Class.h  Classfile.cpp  Classfile.h  ConstantPool.cpp  ConstantPool.h  JObject.h  JvmEnv.cpp  JvmEnv.h  Types.h  VMClassLoader.cpp  VMClassLoader.h  rd.cpp  test.cpp
tests/: Template1.java  Template1.s  Test.java  Test.s  shellcode.c
